compiler/tests/compiler/must_fail/t_16.rs.exp.err
tests/compiler/must_fail/t_16.rs:6:9: 6:10 error: variable z not used, rename to _z to ignore
        z: stack!  (b64);
        ^^
